--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,6 @@
 
 
 :root {
-
-  
-
   --rich-black-fogra-29_50: hsl(210, 26%, 11%, 0.5);
   --rich-black-fogra-29-1: hsl(210, 26%, 11%);
   --rich-black-fogra-29-2: hsl(210, 50%, 4%);
@@ -60,10 +57,6 @@
 
 }
 
-
-
-
-
 *,
 *::before,
 *::after {
@@ -112,6 +105,7 @@ html {
 
 body {
   background-color: var(--white);
+  background-color: aliceblue;
   color: var(--sonic-silver);
   font-size: 1.6rem;
   line-height: 1.6;
@@ -126,8 +120,6 @@ body {
 ::-webkit-scrollbar-thumb { background-color: var(--coquelicot); }
 
 ::-webkit-scrollbar-thumb:hover { background-color: var(--rich-black-fogra-29-1); }
-
-
 
 
 
@@ -338,12 +330,12 @@ body {
   align-items: center;
   margin-inline-start: -8px;
 }
-
+/* 
 .logo ion-icon {
   color: var(--coquelicot);
   font-size: 40px;
   transform: rotate(90deg) translate(-2px, -5px);
-}
+} */
 
 .nav-open-btn {
   background-color: var(--coquelicot);
@@ -376,6 +368,7 @@ body {
   place-content: center;
   visibility: hidden;
   transition: 0.25s var(--cubic-in);
+  background-color: white;
 }
 
 .navbar.active {
@@ -407,15 +400,13 @@ body {
 .navbar-link:is(:hover, :focus, .active) { color: var(--rich-black-fogra-29-1); }
 
 
-
-
-
 .hero {
   color: var(--cadet-gray);
   text-align: center;
   padding-block-start: calc(var(--section-padding) + 80px);
   padding-block-end: 0;
   overflow: hidden;
+  height: 900px;
 }
 
 .hero::after {
@@ -452,7 +443,11 @@ body {
 
 .hero .btn { margin-inline: auto; }
 
-.hero-banner { position: relative; }
+.hero-banner {position:static ;  
+              height: 600px;
+              width: 1200px;
+              margin-left: 100px;
+              }
 
 .abs-img-1 {
   top: 20px;
@@ -1260,4 +1255,9 @@ body {
 
   .footer-top .container { grid-template-columns: 1fr 0.6fr 0.9fr 1fr; }
 
+}
+
+.title-icon{
+  height: 50px;
+  width: 50px;
 }
